tests/expectations/compiler/finalize/finalize_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372006]: function `finalize_no_params` shadowed by
    --> compiler-test:27:5
     |
  27 |     async function finalize_no_params() {
  28 |         increment(values, 0u8, 1u8);
  29 |         increment(account, self.caller, 1u64);
  30 |     }
     |     ^
"""]
